Fixed - 1. Extra white space removed 2. Carousel is now responsive 3. Navbar litle bit fixes

--- a/src/layouts/frontendHeader/Navbar/navbar.css
+++ b/src/layouts/frontendHeader/Navbar/navbar.css
@@ -8,7 +8,6 @@
 }
 
 .text {
-  /* font-size: 1.5rem; */
   font-weight: bold;
   text-align: center;
   opacity: 0;
@@ -30,6 +29,7 @@
     transform: translateY(0);
   }
 }
+
 #search-box {
   transition: box-shadow 0.3s ease-in-out, border-radius 0.3s ease-in-out;
 }
@@ -44,6 +44,7 @@
 }
 
 .wishlist-card {
+  display: none;
   position: absolute;
   padding: 8px 10px;
   height: 200px;
@@ -52,16 +53,18 @@
   border: 3px solid rgb(68, 184, 172);
   background-color: white;
   border-radius: 10px;
-  margin-left: -6%;
+  margin-left: 0;
   visibility: hidden;
   transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
   z-index: 10;
 }
+
 .wishlist-card.show {
+  display: block;
   visibility: visible;
   opacity: 1;
-  transform: scale(1); /* Back to full size */
-  animation: bounce 0.5s ease-out; /* Apply bounce animation */
+  transform: scale(1);
+  animation: bounce 0.5s ease-out;
 }
 
 @keyframes bounce {
@@ -76,12 +79,11 @@
   }
 }
 
-/* Clipping container to demonstrate the portal effect */
 .clipping-container {
   position: relative;
   width: 300px;
   height: 200px;
-  overflow: hidden; /* Content inside won't overflow the boundaries */
+  overflow: hidden;
   border: 1px solid #ccc;
   margin: 20px auto;
   text-align: center;
@@ -89,5 +91,3 @@
   background-color: #f9f9f9;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
-
